tests/fixtures/positive/structure/ProhibitSuppressWarnings.cls
public class Example {
    public void method() {
        // No @SuppressWarnings here
    }
}

