tests/fixtures/negative/structure/ProhibitSuppressWarnings.cls
public class Example {
    @SuppressWarnings('PMD')
    public void method() {
        // This should trigger the rule
    }
}

